# vext

./: .gitignore  .gitlab-ci.yml  .tool-versions  AGENTIC.scm  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  MAINTAINERS.md  META.scm  NEUROSYM.scm  PLAYBOOK.scm  README.adoc  README.md  RSR_COMPLIANCE.md  SECURITY.md  STATE.scm  TECHNOLOGY_STACK.md  flake.nix  guix.scm  justfile  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: codeql.yml  generator-generic-ossf-slsa3-publish.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  language-policy.yml  npm-bun-blocker.yml  python-ci.yml  quality.yml  release.yml  rsr-antipattern.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  dc.xml  humans.txt  security.txt
docs/: conference-materials.md
governance/: PROJECT_GOVERNANCE.md
papers/: tpcf-graduated-trust.md
tests/: README.md  __init__.py  test_placeholder.py
tools/: rsr_checker.py
vext-core/: Cargo.toml
vext-core/src/: config.rs  error.rs  irc_client.rs  listener.rs  pool.rs  protocol.rs
vext-core/tests/: integration.rs
vext-tools/: deno.json  rescript.json
vext-tools/src/: mod.ts
vext-tools/src/hooks/: git.ts  install.ts
