[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vext"
version = "1.0.0"
description = "Rhodium Standard Edition of irker - IRC notifications for version control systems"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT OR AGPL-3.0-or-later"}
authors = [
    {name = "vext Team", email = "hello@vext.dev"},
]
maintainers = [
    {name = "vext Team", email = "maintainers@vext.dev"},
]
keywords = [
    "irc",
    "notifications",
    "git",
    "mercurial",
    "svn",
    "version-control",
    "vcs",
    "ci-cd",
    "devops",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Networking",
]

dependencies = [
    # vext uses primarily standard library
    # Add runtime dependencies here if needed
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-watch>=4.2",
    "black>=22.0",
    "flake8>=5.0",
    "pylint>=2.15",
    "mypy>=0.990",
    "bandit>=1.7",
    "safety>=2.0",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/Hyperpolymath/vext"
Documentation = "https://github.com/Hyperpolymath/vext/blob/main/README.md"
Repository = "https://github.com/Hyperpolymath/vext"
Issues = "https://github.com/Hyperpolymath/vext/issues"
Changelog = "https://github.com/Hyperpolymath/vext/blob/main/CHANGELOG.md"
Security = "https://github.com/Hyperpolymath/vext/blob/main/SECURITY.md"

[project.scripts]
irkerd = "vext.irkerd:main"
irkerhook = "vext.irkerhook:main"

[tool.setuptools]
packages = ["vext"]

[tool.setuptools.package-data]
vext = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["vext"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.bandit]
exclude_dirs = ["/tests"]
skips = ["B101"]  # assert_used

# SPDX-License-Identifier: MIT OR AGPL-3.0-or-later
